History of Products.minaraad
============================

2.2.3 (unreleased)
------------------

- Nothing changed yet.


2.2.2 (2008-12-16)
------------------

- Simplified advisory listing to only show the date and the clickable
  title.  [maurits]

- Study listing: show description instead of summary/body.  [maurits]

- Changed portal actions, for the 'My account' (Mijn voorkeuren)
  portlet.  [maurits]

- Styling changes.  [maurits]


2.2.1 (2008-12-08)
------------------

- Added robots.txt(.dtml) from the custom map.  [maurits]

- Added fckblank.html.pt [.metadata] as that is in the custom map.
  [maurits]


2.2.0 (2008-12-05)
------------------

- Using text/html as the default_content_type for all TextFields.
  [maurits]

- Added external method for moving description to bodytext for
  study/advisory.  [reinout]

- Added body text (label=summary) to Study. Study view shows new body text
  (=summary) field. Study listing shows summary instead of
  description. [reinout]

- Advisory listing shows summary instead of description. Re-labeled Advisory's
  body text as summary field. Added "more info" to advisory listing, keeping
  title as direct link to the pdf. [reinout]

- Changed goal field of Hearing to a richtext widget.  [reinout]

- Added relatedDocuments field to Advisories, where you can select
  published Pages and Files from the 'digibib-1/dossiers-adviezen'
  path.  [maurits]

- Allow workflow transition between the restricted and published state
  and the other way around.  [maurits]

- Added 'Mijn abonnementen' action to personal portlet.  [maurits+simon]

- Made undo action invisible in portal_undo.  [maurits+simon]

- Added styling to the personal tools portlet.  Added 'My account' as
  portlet title. [simon+maurits]

- Added styling to hearing subscribe/unsubscribe. [simon+maurits]


2.1.7 (4 August 2008)
---------------------

- Changed heading for changed members as they are not always of the
  last month.  [maurits]


2.1.6 (4 August 2008)